# genscribe

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  test_audio.txt
.github/workflows/: release.yml
examples/: headless.rs
macos/: AppIcon.icns  Info.plist  build_dmg.sh
src/: audio.rs  bin_resolve.rs  lib.rs  main.rs  model.rs  pipeline.rs  ytdlp.rs
